@@ -1,28 +1,28 @@
 From x@y.x Tue Mar 02 09:44:33 1999
-Received: from [ip4.ip4.ip4.ip4] (port=1112)
+Received: from [ip4.ip4.ip4.ip4] (port=1113)
 	by myhost.test.ex with smtp (Exim x.yz)
 	(envelope-from <x@y.x>)
 	id 10HmaY-0005vi-00
-	for x@test.ex; Tue, 2 Mar 1999 09:44:33 +0000
-Port: 1112
-
-
-From x@y.x Tue Mar 02 09:44:33 1999
-Received: from [127.0.0.1] (port=1113)
-	by myhost.test.ex with smtp (Exim x.yz)
-	(envelope-from <x@y.x>)
-	id 10HmaZ-0005vi-00
 	for x@test.ex; Tue, 2 Mar 1999 09:44:33 +0000
 Port: 1113
 
 
 From x@y.x Tue Mar 02 09:44:33 1999
-Received: from [ip4.ip4.ip4.ip4] (port=1114 helo=rhubarb)
+Received: from [127.0.0.1] (port=1114)
+	by myhost.test.ex with smtp (Exim x.yz)
+	(envelope-from <x@y.x>)
+	id 10HmaZ-0005vi-00
+	for x@test.ex; Tue, 2 Mar 1999 09:44:33 +0000
+Port: 1114
+
+
+From x@y.x Tue Mar 02 09:44:33 1999
+Received: from [ip4.ip4.ip4.ip4] (port=1115 helo=rhubarb)
 	by myhost.test.ex with smtp (Exim x.yz)
 	(envelope-from <x@y.x>)
 	id 10HmbA-0005vi-00
 	for x@test.ex; Tue, 2 Mar 1999 09:44:33 +0000
-Port: 1114
+Port: 1115
 
 
 From x@y.x Tue Mar 02 09:44:33 1999
